Actions
Bug #10775
closedkmech_krb5: NULL pointer errors
Start date:
2019-04-14
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
In file included from ../../common/sys/param.h:48:0, from ../../common/sys/t_lock.h:38, from ../../common/sys/thread.h:36, from ../../common/sys/poll.h:101, from ../../common/sys/stream.h:42, from ../../common/sys/crypto/common.h:41, from ../../common/gssapi/mechs/krb5/include/k5-int.h:91, from ../../common/gssapi/mechs/krb5/crypto/etypes.c:42: ../../common/sys/null.h:32:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/gssapi/mechs/krb5/crypto/etypes.c:105:7: note: in expansion of macro 'NULL' NULL, ^~~~ ../../common/sys/null.h:32:14: note: (near initialization for 'krb5_enctypes_list[3].required_ctype') #define NULL ((void *)0) ^ ../../common/gssapi/mechs/krb5/crypto/etypes.c:105:7: note: in expansion of macro 'NULL' NULL, ^~~~ ../../common/sys/null.h:32:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/gssapi/mechs/krb5/crypto/etypes.c:120:7: note: in expansion of macro 'NULL' NULL, ^~~~ ../../common/sys/null.h:32:14: note: (near initialization for 'krb5_enctypes_list[4].required_ctype') #define NULL ((void *)0) ^ ../../common/gssapi/mechs/krb5/crypto/etypes.c:120:7: note: in expansion of macro 'NULL' NULL, ^~~~ ../../common/sys/null.h:32:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/gssapi/mechs/krb5/crypto/etypes.c:195:7: note: in expansion of macro 'NULL' NULL, ^~~~ ../../common/sys/null.h:32:14: note: (near initialization for 'krb5_enctypes_list[9].required_ctype') #define NULL ((void *)0) ^ ../../common/gssapi/mechs/krb5/crypto/etypes.c:195:7: note: in expansion of macro 'NULL' NULL, ^~~~ In file included from ../../common/sys/param.h:48:0, from ../../common/sys/t_lock.h:38, from ../../common/sys/thread.h:36, from ../../common/sys/poll.h:101, from ../../common/sys/stream.h:42, from ../../common/sys/crypto/common.h:41, from ../../common/gssapi/mechs/krb5/include/k5-int.h:91, from ../../common/gssapi/mechs/krb5/crypto/cksumtypes.c:33: ../../common/sys/null.h:32:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/gssapi/mechs/krb5/crypto/cksumtypes.c:41:7: note: in expansion of macro 'NULL' NULL, NULL, &krb5int_hash_crc32, 0, ^~~~ ../../common/sys/null.h:32:14: note: (near initialization for 'krb5_cksumtypes_list[0].keyed_etype') #define NULL ((void *)0) ^ ../../common/gssapi/mechs/krb5/crypto/cksumtypes.c:41:7: note: in expansion of macro 'NULL' NULL, NULL, &krb5int_hash_crc32, 0, ^~~~ ../../common/sys/null.h:32:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/gssapi/mechs/krb5/crypto/cksumtypes.c:51:14: note: in expansion of macro 'NULL' NULL, NULL, ^~~~ ../../common/sys/null.h:32:14: note: (near initialization for 'krb5_cksumtypes_list[1].trunc_size') #define NULL ((void *)0) ^ ../../common/gssapi/mechs/krb5/crypto/cksumtypes.c:51:14: note: in expansion of macro 'NULL' NULL, NULL, ^~~~ ../../common/sys/null.h:32:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/gssapi/mechs/krb5/crypto/cksumtypes.c:60:7: note: in expansion of macro 'NULL' NULL, NULL, &krb5int_hash_md5, 0, ^~~~ ../../common/sys/null.h:32:14: note: (near initialization for 'krb5_cksumtypes_list[2].keyed_etype') #define NULL ((void *)0) ^ ../../common/gssapi/mechs/krb5/crypto/cksumtypes.c:60:7: note: in expansion of macro 'NULL' NULL, NULL, &krb5int_hash_md5, 0, ^~~~ ../../common/sys/null.h:32:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/gssapi/mechs/krb5/crypto/cksumtypes.c:69:13: note: in expansion of macro 'NULL' NULL, NULL, ^~~~ ../../common/sys/null.h:32:14: note: (near initialization for 'krb5_cksumtypes_list[3].trunc_size') #define NULL ((void *)0) ^ ../../common/gssapi/mechs/krb5/crypto/cksumtypes.c:69:13: note: in expansion of macro 'NULL' NULL, NULL, ^~~~ ../../common/sys/null.h:32:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/gssapi/mechs/krb5/crypto/cksumtypes.c:78:7: note: in expansion of macro 'NULL' NULL, NULL, &krb5int_hash_sha1, 0, ^~~~ ../../common/sys/null.h:32:14: note: (near initialization for 'krb5_cksumtypes_list[4].keyed_etype') #define NULL ((void *)0) ^ ../../common/gssapi/mechs/krb5/crypto/cksumtypes.c:78:7: note: in expansion of macro 'NULL' NULL, NULL, &krb5int_hash_sha1, 0, ^~~~ ../../common/sys/null.h:32:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/gssapi/mechs/krb5/crypto/cksumtypes.c:87:7: note: in expansion of macro 'NULL' NULL, NULL, &krb5int_hash_sha1, 0, ^~~~ ../../common/sys/null.h:32:14: note: (near initialization for 'krb5_cksumtypes_list[5].keyed_etype') #define NULL ((void *)0) ^ ../../common/gssapi/mechs/krb5/crypto/cksumtypes.c:87:7: note: in expansion of macro 'NULL' NULL, NULL, &krb5int_hash_sha1, 0, ^~~~ ../../common/sys/null.h:32:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/gssapi/mechs/krb5/crypto/cksumtypes.c:95:7: note: in expansion of macro 'NULL' NULL, NULL, &krb5int_hash_sha1, 0, ^~~~ ../../common/sys/null.h:32:14: note: (near initialization for 'krb5_cksumtypes_list[6].keyed_etype') #define NULL ((void *)0) ^ ../../common/gssapi/mechs/krb5/crypto/cksumtypes.c:95:7: note: in expansion of macro 'NULL' NULL, NULL, &krb5int_hash_sha1, 0, ^~~~ ../../common/sys/null.h:32:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/gssapi/mechs/krb5/crypto/cksumtypes.c:131:2: note: in expansion of macro 'NULL' NULL, NULL, &krb5int_hash_sha1, 12, ^~~~ ../../common/sys/null.h:32:14: note: (near initialization for 'krb5_cksumtypes_list[10].keyed_etype') #define NULL ((void *)0) ^ ../../common/gssapi/mechs/krb5/crypto/cksumtypes.c:131:2: note: in expansion of macro 'NULL' NULL, NULL, &krb5int_hash_sha1, 12, ^~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 8cd1b71859be6a08c9b7a446994fdbca544bb34f
commit 8cd1b71859be6a08c9b7a446994fdbca544bb34f Author: Toomas Soome <tsoome@me.com> Date: 2019-04-24T06:52:35.000Z 10775 kmech_krb5: NULL pointer errors Reviewed by: Andy Stormont <astormont@racktopsystems.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions